# CityWeather

./: .gitignore  CMakeLists.txt  CityWeather  Makefile  README.md  launch.sh  quick_install.sh
gtk_ui/: #cityWeather.gtk3.glade#  cityWeather.gtk3.glade  cityWeather.gtk3.glade~  cityWeather.gtk4.glade  gtk3to4converter.sh
includes/: AMeteoApi.hpp  ApiRequester.hpp  City.hpp  FetchDataException.hpp  GUI.hpp  GUIException.hpp  GeoCodeApi.hpp  Logger.hpp  MeteoTile.hpp  OpenMeteoApi.hpp  Utils.hpp
srcs/: AMeteoApi.cpp  ApiRequester.cpp  City.cpp  FetchDataException.cpp  GUI.cpp  GUIException.cpp  GeoCodeApi.cpp  Logger.cpp  MainWindow.cpp  MainWindow.hpp  MeteoTile.cpp  OpenMeteoApi.cpp  Utils.cpp  main copy.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave
srcs/tests/: main_tests.cpp
